ocaml/testsuite/tests/parse-errors/bigarray_index_labels.compilers.reference
File "bigarray_index_labels.ml", line 14, characters 14-23:
14 | my_big_array.{(1, ~y:2)} <- 1.5;;
                   ^^^^^^^^^
Error: Bigarray indices cannot be labeled
